# simplify

./: .gitignore  Cargo.toml  README.md
src/: eval.rs  grammar.pest  logic.rs  main.rs  parser.rs  simp.rs
