[package]
name = "simlog"
description = "Simplifier for complex boolean expressions."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.7.0"
pest_derive = "2.7.0"
quine-mc_cluskey = "0.2.4"
